// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Button 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "hsl(0, 0%, 17%)",
      "borderRadius": 100,
      "flex": 1,
      "justifyContent": "center",
      "marginBottom": 4,
      "marginLeft": 8,
      "marginRight": 8,
      "marginTop": 4,
      "opacity": 1,
    }
  }
>
  <Text
    style={
      Object {
        "color": "white",
        "fontSize": 32,
      }
    }
  />
</View>
`;

exports[`renders correctly 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "black",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "flex": 2,
        "justifyContent": "flex-end",
        "margin": 20,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "white",
          "fontSize": 60,
          "textAlign": "right",
        }
      }
    >
      0
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 8,
        "margin": 10,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-around",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#A4A4A4",
            "borderRadius": 100,
            "flex": 1,
            "justifyContent": "center",
            "marginBottom": 4,
            "marginLeft": 8,
            "marginRight": 8,
            "marginTop": 4,
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 32,
            }
          }
        >
          AC
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#A4A4A4",
            "borderRadius": 100,
            "flex": 1,
            "justifyContent": "center",
            "marginBottom": 4,
            "marginLeft": 8,
            "marginRight": 8,
            "marginTop": 4,
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 32,
            }
          }
        >
          +/-
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#A4A4A4",
            "borderRadius": 100,
            "flex": 1,
            "justifyContent": "center",
            "marginBottom": 4,
            "marginLeft": 8,
            "marginRight": 8,
            "marginTop": 4,
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 32,
            }
          }
        >
          %
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#FA9307",
            "borderRadius": 100,
            "flex": 1,
            "justifyContent": "center",
            "marginBottom": 4,
            "marginLeft": 8,
            "marginRight": 8,
            "marginTop": 4,
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 32,
            }
          }
        >
          ÷
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-around",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "hsl(0, 0%, 17%)",
            "borderRadius": 100,
            "flex": 1,
            "justifyContent": "center",
            "marginBottom": 4,
            "marginLeft": 8,
            "marginRight": 8,
            "marginTop": 4,
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 32,
            }
          }
        >
          mc
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "hsl(0, 0%, 17%)",
            "borderRadius": 100,
            "flex": 1,
            "justifyContent": "center",
            "marginBottom": 4,
            "marginLeft": 8,
            "marginRight": 8,
            "marginTop": 4,
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 32,
            }
          }
        >
          mr
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "hsl(0, 0%, 17%)",
            "borderRadius": 100,
            "flex": 1,
            "justifyContent": "center",
            "marginBottom": 4,
            "marginLeft": 8,
            "marginRight": 8,
            "marginTop": 4,
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 32,
            }
          }
        >
          m-
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#FA9307",
            "borderRadius": 100,
            "flex": 1,
            "justifyContent": "center",
            "marginBottom": 4,
            "marginLeft": 8,
            "marginRight": 8,
            "marginTop": 4,
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 32,
            }
          }
        >
          m+
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-around",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "hsl(0, 0%, 17%)",
            "borderRadius": 100,
            "flex": 1,
            "justifyContent": "center",
            "marginBottom": 4,
            "marginLeft": 8,
            "marginRight": 8,
            "marginTop": 4,
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 32,
            }
          }
        >
          7
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "hsl(0, 0%, 17%)",
            "borderRadius": 100,
            "flex": 1,
            "justifyContent": "center",
            "marginBottom": 4,
            "marginLeft": 8,
            "marginRight": 8,
            "marginTop": 4,
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 32,
            }
          }
        >
          8
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "hsl(0, 0%, 17%)",
            "borderRadius": 100,
            "flex": 1,
            "justifyContent": "center",
            "marginBottom": 4,
            "marginLeft": 8,
            "marginRight": 8,
            "marginTop": 4,
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 32,
            }
          }
        >
          9
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#FA9307",
            "borderRadius": 100,
            "flex": 1,
            "justifyContent": "center",
            "marginBottom": 4,
            "marginLeft": 8,
            "marginRight": 8,
            "marginTop": 4,
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 32,
            }
          }
        >
          x
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-around",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "hsl(0, 0%, 17%)",
            "borderRadius": 100,
            "flex": 1,
            "justifyContent": "center",
            "marginBottom": 4,
            "marginLeft": 8,
            "marginRight": 8,
            "marginTop": 4,
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 32,
            }
          }
        >
          4
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "hsl(0, 0%, 17%)",
            "borderRadius": 100,
            "flex": 1,
            "justifyContent": "center",
            "marginBottom": 4,
            "marginLeft": 8,
            "marginRight": 8,
            "marginTop": 4,
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 32,
            }
          }
        >
          5
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "hsl(0, 0%, 17%)",
            "borderRadius": 100,
            "flex": 1,
            "justifyContent": "center",
            "marginBottom": 4,
            "marginLeft": 8,
            "marginRight": 8,
            "marginTop": 4,
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 32,
            }
          }
        >
          6
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#FA9307",
            "borderRadius": 100,
            "flex": 1,
            "justifyContent": "center",
            "marginBottom": 4,
            "marginLeft": 8,
            "marginRight": 8,
            "marginTop": 4,
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 32,
            }
          }
        >
          -
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-around",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "hsl(0, 0%, 17%)",
            "borderRadius": 100,
            "flex": 1,
            "justifyContent": "center",
            "marginBottom": 4,
            "marginLeft": 8,
            "marginRight": 8,
            "marginTop": 4,
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 32,
            }
          }
        >
          1
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "hsl(0, 0%, 17%)",
            "borderRadius": 100,
            "flex": 1,
            "justifyContent": "center",
            "marginBottom": 4,
            "marginLeft": 8,
            "marginRight": 8,
            "marginTop": 4,
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 32,
            }
          }
        >
          2
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "hsl(0, 0%, 17%)",
            "borderRadius": 100,
            "flex": 1,
            "justifyContent": "center",
            "marginBottom": 4,
            "marginLeft": 8,
            "marginRight": 8,
            "marginTop": 4,
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 32,
            }
          }
        >
          3
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#FA9307",
            "borderRadius": 100,
            "flex": 1,
            "justifyContent": "center",
            "marginBottom": 4,
            "marginLeft": 8,
            "marginRight": 8,
            "marginTop": 4,
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 32,
            }
          }
        >
          +
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-around",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "flex-start",
            "backgroundColor": "hsl(0, 0%, 17%)",
            "borderRadius": 100,
            "flex": 2,
            "justifyContent": "center",
            "marginBottom": 4,
            "marginLeft": 8,
            "marginRight": 8,
            "marginTop": 4,
            "opacity": 1,
            "paddingLeft": 28,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 32,
            }
          }
        >
          0
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "hsl(0, 0%, 17%)",
            "borderRadius": 100,
            "flex": 1,
            "justifyContent": "center",
            "marginBottom": 4,
            "marginLeft": 8,
            "marginRight": 8,
            "marginTop": 4,
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 32,
            }
          }
        >
          .
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#FA9307",
            "borderRadius": 100,
            "flex": 1,
            "justifyContent": "center",
            "marginBottom": 4,
            "marginLeft": 8,
            "marginRight": 8,
            "marginTop": 4,
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 32,
            }
          }
        >
          =
        </Text>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`renders correctly 2`] = `
<Text>
  Snapshot test!
</Text>
`;
